fixed group posts alignment

--- a/src/public/styles/post.css
+++ b/src/public/styles/post.css
@@ -5,7 +5,7 @@
     -webkit-backdrop-filter: blur(16px);
     border-radius: 20px;
     padding: 16px 24px;
-    margin-bottom: 15px;
+    margin: 0 auto 15px auto;
     width: 90%;
     max-width: 1000px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
